<?xml version="1.0"?>
<package format="2">
  <name>planner_cspace</name>
  <version>0.10.11</version>
  <description>3-dof configuration space planner for mobile robot</description>

  <maintainer email="atsushi.w@ieee.org">Atsushi Watanabe</maintainer>
  <license>BSD</license>
  <author email="atsushi.w@ieee.org">Atsushi Watanabe</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

  <test_depend>roslint</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>map_server</test_depend>
  <test_depend>trajectory_tracker</test_depend>

  <depend>actionlib</depend>
  <depend>diagnostic_updater</depend>
  <depend>geometry_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>trajectory_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <depend>costmap_cspace</depend>
  <depend>costmap_cspace_msgs</depend>
  <depend>neonavigation_common</depend>
  <depend version_gte="0.7.0">planner_cspace_msgs</depend>
  <depend>trajectory_tracker_msgs</depend>
</package>
