<?xml version="1.0"?>
<package format="2">
  <name>safety_limiter</name>
  <version>0.2.3</version>
  <description>Motion limiter package for collision prevention</description>

  <maintainer email="atsushi.w@ieee.org">Atsushi Watanabe</maintainer>
  <license>BSD</license>
  <author email="atsushi.w@ieee.org">Atsushi Watanabe</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <test_depend>rostest</test_depend>
  <test_depend>roslint</test_depend>

  <depend>diagnostic_updater</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>

  <depend>neonavigation_common</depend>

  <depend>cmake_modules</depend>
  <depend>eigen</depend>
  <depend>xmlrpcpp</depend>
</package>
