<?xml version="1.0"?>
<package format="2">
  <name>safety_limiter</name>
  <version>0.10.10</version>
  <description>Motion limiter package for collision prevention</description>

  <maintainer email="atsushi.w@ieee.org">Atsushi Watanabe</maintainer>
  <license>BSD</license>
  <author email="atsushi.w@ieee.org">Atsushi Watanabe</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <test_depend>nav_msgs</test_depend>
  <test_depend>tf2_geometry_msgs</test_depend>
  <test_depend>roslint</test_depend>
  <test_depend>rostest</test_depend>

  <depend>diagnostic_updater</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>

  <depend>neonavigation_common</depend>
  <depend>safety_limiter_msgs</depend>

  <depend>eigen</depend>
  <depend>xmlrpcpp</depend>

  <build_depend>libpcl-all-dev</build_depend>
  <exec_depend>libpcl-all</exec_depend>
</package>
