<?xml version="1.0"?>
<package format="2">
  <name>safety_limiter</name>
  <version>0.17.5</version>
  <description>Motion limiter package for collision prevention</description>

  <maintainer email="atsushi.w@ieee.org">Atsushi Watanabe</maintainer>
  <license>BSD</license>
  <author email="atsushi.w@ieee.org">Atsushi Watanabe</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <test_depend>nav_msgs</test_depend>
  <test_depend>tf2_geometry_msgs</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>

  <depend>diagnostic_updater</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>neonavigation_common</depend>
  <depend>safety_limiter_msgs</depend>

  <depend>eigen</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>rclcpp</depend>

  <build_depend>libpcl-all-dev</build_depend>
  <exec_depend>libpcl-all</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
