<?xml version="1.0"?>
<package format="2">
  <name>trajectory_tracker</name>
  <version>0.4.0</version>
  <description>Path following control package for wheeled mobile robot</description>

  <maintainer email="atsushi.w@ieee.org">Atsushi Watanabe</maintainer>
  <license>BSD</license>
  <author email="atsushi.w@ieee.org">Atsushi Watanabe</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <test_depend>roslint</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>

  <depend>geometry_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <depend>eigen</depend>

  <depend>neonavigation_common</depend>
  <depend>trajectory_tracker_msgs</depend>
</package>
